docs: add docs for deleteOpening
