# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/marcsvinicius/go-api-jobs/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -21,4 +22,19 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 		"msg":  fmt.Sprintf("operation from handler %s sucessfull", op),
 		"data": data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json:"message"`
+	Data    schemas.OpeningResponse
+}
+
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data    schemas.OpeningResponse
 }
